fix: hidescrollbar remove console.log

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,17 @@
 @import "tailwindcss";
 
+    @layer utilities {
+      /* For WebKit browsers (Chrome, Safari, Edge, Opera) */
+      .no-scrollbar::-webkit-scrollbar {
+        display: none;
+      }
 
+      /* For IE, Edge, and Firefox */
+      .no-scrollbar {
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+      }
+    }
 .loader {
     border: 4px solid #f3f3f3;
     border-top: 4px solid #ae7aff;
