--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,22 @@
 @import "tailwindcss";
 
+    @layer utilities {
+      /* For WebKit browsers (Chrome, Safari, Edge, Opera) */
+      .no-scrollbar::-webkit-scrollbar {
+        display: none;
+      }
+
+      /* For IE, Edge, and Firefox */
+      .no-scrollbar {
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+      }
+    }
+
+ .hide-scrollbar::-webkit-scrollbar {
+      display: none;             /* Chrome, Safari, and Opera */
+    }
+
 /* Add this to your CSS file */
 .loader {
     border: 4px solid #f3f3f3;
